working on about me

--- a/index.html
+++ b/index.html
@@ -16,18 +16,15 @@
 
     <main>
         <div id="aboutMe">
-
             <figure>
-                <figcaption>Catherine Matthews</figcaption>
-                <p style="font-size: 20px;"></p>
-                <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">RESUME</a>/<a href="https://www.linkedin.com/in/catherine-matthews-110337232/" class="website" target="_blank" rel="noopener noreferrer">Linked In</a>/<a href="https://www.linkedin.com/in/catherine-matthews-110337232/" class="website" target="_blank" rel="noopener noreferrer">GitHub</a>
                 <img id="me" src="assets/images/me.png" alt="Profile Image">
+                <figcaption>Catherine Matthews</figcaption>
             </figure>
 
             <div>
                 <div class="details">
 
-                    <h2 id="objective">Objective</h2>
+                    <h2 id="objective" class="focus">Objective</h2>
                     <div class="h0">
 
                         <p>A motivated and analytical professional with a strong foundation in data analytics, seeking
@@ -43,9 +40,6 @@
                         <p><strong>Data Analytics Bootcamp</strong><br>
                             University of Pennsylvania – Philadelphia, PA<br>
                             03/2024 – Present</p>
-                        <p><strong>Bachelors of Fine Arts</strong><br>
-                            University of Pennsylvania – Philadelphia, PA<br>
-                            09/2016 – 05/2022</p>
                         <ul>
                             <li>Gained proficiency in technologies including Excel, Python, JavaScript, SQL Databases,
                                 Tableau, and more.</li>
@@ -53,6 +47,9 @@
                                 modeling to web-based interactive visualizations.</li>
                             <li>Collaborated on group projects to solve real-world problems using data analytics.</li>
                         </ul>
+                        <p><strong>Bachelors of Fine Arts</strong><br>
+                            University of Pennsylvania – Philadelphia, PA<br>
+                            09/2016 – 05/2022</p>
                     </div>
                 </div>
 
@@ -61,9 +58,11 @@
                     <div class="h0">
                         <ul>
                             <li><strong>Programming Languages</strong>: Python, JavaScript, SQL</li>
-                            <li><strong>Data Analysis</strong>: Excel (including VBA scripting), Pandas, NumPy, Matplotlib</li>
+                            <li><strong>Data Analysis</strong>: Excel (including VBA scripting), Pandas, NumPy,
+                                Matplotlib</li>
                             <li><strong>Databases</strong>: PostgreSQL, MongoDB</li>
-                            <li><strong>Data Visualization</strong>: Tableau, Matplotlib, HTML/CSS, JavaScript libraries (e.g., Leaflet)</li>
+                            <li><strong>Data Visualization</strong>: Tableau, Matplotlib, HTML/CSS, JavaScript libraries
+                                (e.g., Leaflet)</li>
                             <li><strong>Web Development</strong>: HTML, CSS, JavaScript</li>
                             <li><strong>Other Tools</strong>: GitHub, JSON, APIs, Hadoop, Machine Learning basics</li>
                         </ul>
@@ -73,7 +72,7 @@
         </div>
 
         <div id="skillIcon">
-            
+
         </div>
     </main>
 
@@ -85,62 +84,70 @@
                 <img src="assets/images/earthquakemap.png" alt="Earthquake Map" class="small-image">
                 <div class="info">
                     <h4>Earthquake Map</h4>
-                    <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html">LIVE WEBSITE</a>
-                </div>
-            </div>
-            <div class="app">
-                <img src="assets/images/Belly Button Biodiversity Dashboard.png"
-                    alt="Bellybutton Biodiversity Dashboard" class="small-image">
-                <div class="info">
-                    <h4>Bellybutton Biodiversity Dashboard</h4>
-                    <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
-                </div>
-            </div>
-            <div class="app">
-                <img src="assets/images/sdgi.png" alt="SDGi Map" class="small-image">
-                <div class="info">
-                    <h4>Sustainable Development Growth Index Map</h4>
-                    <a href="https://mattcat1221.github.io/interactive_sdgi_map/">LIVE WEBSITE</a>
-                </div>
-            </div>
-            <div class="app">
-                <img src="assets/images/Crypto.png" alt="Bellybutton Biodiversity Dashboard" class="small-image">
-                <div class="info">
-                    <h4>Cryptocurrency Dash</h4>
-                    <a href="https://crypto-clustering-analysis-811021pb3-caseys-projects-78b1de0d.vercel.app/">LIVE WEBSITE</a>
-                </div>
-            </div>
-            <div class="app">
-                <img src="assets/images/tableau.png" alt="Tableau Map" class="small-image">
-                <div class="info">
-                    <h4>Tableau Analysis</h4>
-                    <a href="https://public.tableau.com/app/profile/catherine.matthews1724/viz/tableauanalysis_17209724886070/GroveSt_HourlyArrivalActivity">LIVE WEBSITE</a>
-                </div>
-            </div>
-            <div class="app">
-                <img src="assets/images/stocks.png" alt="Credit Risk Classification" class="small-image">
-                <div class="info">
-                    <h4>VBA Analysis</h4>
-                    <a href="https://1drv.ms/x/c/170bfacda3467f60/EYT8O2GbaftJtMaMFvEI_MUBJ-K-xX9CYBww4NudeL3CIA">LIVE WEBSITE</a>
-                </div>
-            </div>
-        </div>
-    </main>
+                    <p>JavaScript, Html, CSS, Leaflet libraries
 
-    <main>
-        <div class="info">
-            <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">RESUME</a>
-            <a href="https://github.com/mattcat1221" class="github" target="_blank" rel="noopener noreferrer">GitHub</a>
-            <a href="https://www.linkedin.com/in/catherine-matthews-110337232/" class="website" target="_blank" rel="noopener noreferrer">linkedin</a>
-        </div>
-</div></div>
-        <h1>Contacts</h1>
-        <div class="contact info">
-            <a href="mailto:caseyvmathhews@gmail.com">Email</a>
-        </div>
-    </main>
+</Html>
+</p>
+<a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html">LIVE WEBSITE</a>
+</div>
+</div>
+<div class="app">
+    <img src="assets/images/Belly Button Biodiversity Dashboard.png" alt="Bellybutton Biodiversity Dashboard"
+        class="small-image">
+    <div class="info">
+        <h4>Navel Biodiversity</h4>
+        <p>JavaScript, Html, CSS</p>
+        <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
+    </div>
+</div>
+<div class="app">
+    <img src="assets/images/sdgi.png" alt="SDGi Map" class="small-image">
+    <div class="info">
+        <h4>Sustainable Development Growth Index Map</h4>
+        <p>JavaScript, Html, CSS, Leaflet libraries</p>
+        <a href="https://mattcat1221.github.io/interactive_sdgi_map/">LIVE WEBSITE</a>
+    </div>
+</div>
+<div class="app">
+    <img src="assets/images/Crypto.png" alt="Bellybutton Biodiversity Dashboard" class="small-image">
+    <div class="info">
+        <h4>Cryptocurrency Dash</h4>
+        <p>JavaScript, Html, CSS</p>
+        <a href="https://crypto-clustering-analysis-811021pb3-caseys-projects-78b1de0d.vercel.app/">LIVE
+            WEBSITE</a>
+    </div>
+</div>
+<div class="app">
+    <img src="assets/images/tableau.png" alt="Tableau Map" class="small-image">
+    <div class="info">
+        <h4>Tableau Analysis</h4>
 
-    <script src="assets/js/script.js"></script>
+        <a
+            href="https://public.tableau.com/app/profile/catherine.matthews1724/viz/tableauanalysis_17209724886070/GroveSt_HourlyArrivalActivity">LIVE
+            WEBSITE</a>
+    </div>
+</div>
+<div class="app">
+    <img src="assets/images/stocks.png" alt="Credit Risk Classification" class="small-image">
+    <div class="info">
+        <h4>VBA Analysis</h4>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <a href="https://1drv.ms/x/c/170bfacda3467f60/EYT8O2GbaftJtMaMFvEI_MUBJ-K-xX9CYBww4NudeL3CIA">LIVE
+            WEBSITE</a>
+    </div>
+</div>
+</div>
+</main>
+
+<main>
+    </div>
+    <h1>Contacts</h1>
+    <div class="contact">
+        <a href="mailto:caseyvmathhews@gmail.com">Email</a>
+    </div>
+</main>
+
+<script src="assets/js/script.js"></script>
 </body>
 
 </html>
