--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div id="apps">
             <div class="app">
-                <img src="assets/images/earthquakemap.png" alt="Earthquake Map" class="small-image">
+                <img src="/Users/cmatthews/Desktop/Data-Analyst/earthquakemap.JPEG" alt="Earthquake Map" class="small-image">
                 <div class="info">
                     <h4>Earthquake Map</h4>
                     <p>JavaScript, Html, CSS, Leaflet libraries
