--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 </Html>
 </p>
 <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html">LIVE WEBSITE</a>
+    <img src="assets/images/earthquakemap.png" alt="Leaflet Analysis"
 </div>
 </div>
 <div class="app">
