--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div id="apps">
             <div class="app">
-                <img src="assets/images/earthquakemap.JPEG" alt="Earthquake Map" class="small-image">
+                <img src="assets/images/earthquakemap.png" alt="Earthquake Map" class="small-image">
                 <div class="info">
                     <h4>Earthquake Map</h4>
                     <p>JavaScript, Html, CSS, Leaflet libraries
@@ -89,7 +89,6 @@
 </Html>
 </p>
 <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html">LIVE WEBSITE</a>
-    <img src="assets/images/earthquakemap.png" alt="Leaflet Analysis"
 </div>
 </div>
 <div class="app">
