--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div id="apps">
             <div class="app">
-                <img src="Portfolio/assets/images/earthquakemap.png" alt="Earthquake Map" class="small-image">
+                <img src="assets/images/earthquakemap.png" alt="Earthquake Map" class="small-image">
                 <div class="info">
                     <h4>Earthquake Map</h4>
                     <p>JavaScript, Html, CSS, Leaflet libraries
@@ -95,7 +95,7 @@
     <img src="assets/images/Belly Button Biodiversity Dashboard.png" alt="Bellybutton Biodiversity Dashboard"
         class="small-image">
     <div class="info">
-        <h4>JavaScript Analysis</h4>
+        <h4>Navel Biodiversity</h4>
         <p>JavaScript, Html, CSS</p>
         <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
     </div>
@@ -131,7 +131,7 @@
     <img src="assets/images/stocks.png" alt="Credit Risk Classification" class="small-image">
     <div class="info">
         <h4>VBA Analysis</h4>
-        <p></p>
+        <p>Lorem ipsum dolor sit amet.</p>
         <a href="https://1drv.ms/x/c/170bfacda3467f60/EYT8O2GbaftJtMaMFvEI_MUBJ-K-xX9CYBww4NudeL3CIA">LIVE
             WEBSITE</a>
     </div>
