--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <h1>Contacts</h1>
     <div class="contact">
         <!-- Email -->
-        <a href="mailto:caseyvmatthews@gmail.com">
+        <a href="https://mail.google.com/"> 
             <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Email" class="small-icon">
            Email
         </a>
