fixed contacts section

--- a/index.html
+++ b/index.html
@@ -142,10 +142,11 @@
     <h1>Contacts</h1>
     <div class="contact">
         <!-- Email -->
-        <a href="mailto:caseyvmatthews@gmail.com" target="_blank"> 
+        <a href=mailto:https://caseyvmatthews@gmail.com target="_blank"> 
             <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Email" class="small-icon">
            Email
         </a>
+</a>
     
         <!-- GitHub -->
         <a href="https://github.com/mattcat1221" target="_blank">
