worked on apps and divider

--- a/index.html
+++ b/index.html
@@ -79,130 +79,146 @@
     <div id="divider1"></div>
 
     <div id="bg1">
+        <h1>Applications</h1>
 
-        <main>
-            <h1>Applications</h1>
 
-            <div id="apps">
-                <div class="app">
-                    <img src="assets/images/earthquakemap.png" alt="Earthquake Map" class="small-image">
-                    <div class="info">
-                        <h4>Earthquake Map</h4>
-                        <p>JavaScript, Html, CSS, Leaflet libraries
+    <main>
 
-</Html>
-</p>
-<a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html">LIVE WEBSITE</a>
+        <div id="apps">
+            <div class="app">
+                <img src="assets/images/earthquakemap copy.png" alt="Earthquake Map" class="small-image">
+                <div class="info">
+                    <h4>Earthquake Map</h4>
+                    <p>JavaScript, Html, CSS, Leaflet libraries
+
+                    </p>
+                    <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html">LIVE
+                        WEBSITE</a>
+                </div>
+            </div>
+            <div class="app">
+                <img src="assets/images/Belly Button Biodiversity Dashboard.png"
+                    alt="Bellybutton Biodiversity Dashboard" class="small-image">
+                <div class="info">
+                    <h4>Navel Biodiversity</h4>
+                    <p>JavaScript, Html, CSS</p>
+                    <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
+                </div>
+            </div>
+            <div class="app">
+                <img src="assets/images/sdgi.png" alt="SDGi Map" class="small-image">
+                <div class="info">
+                    <h4>Sustainable Development Growth Index Map</h4>
+                    <p>JavaScript, Html, CSS, Leaflet libraries</p>
+                    <a href="https://mattcat1221.github.io/interactive_sdgi_map/">LIVE WEBSITE</a>
+                </div>
+            </div>
+            <div class="app">
+                <img src="assets/images/Crypto.png" alt="Bellybutton Biodiversity Dashboard" class="small-image">
+                <div class="info">
+                    <h4>Cryptocurrency Dash</h4>
+                    <p>JavaScript, Html, CSS</p>
+                    <a href="https://crypto-clustering-analysis-811021pb3-caseys-projects-78b1de0d.vercel.app/">LIVE
+                        WEBSITE</a>
+                </div>
+            </div>
+            <div class="app">
+                <img src="assets/images/tableau.png" alt="Tableau Map" class="small-image">
+                <div class="info">
+                    <h4>Tableau Analysis</h4>
+
+                    <a
+                        href="https://public.tableau.com/app/profile/catherine.matthews1724/viz/tableauanalysis_17209724886070/GroveSt_HourlyArrivalActivity">LIVE
+                        WEBSITE</a>
+                </div>
+            </div>
+            <div class="app">
+                <img src="assets/images/stocks.png" alt="Credit Risk Classification" class="small-image">
+                <div class="info">
+                    <h4>VBA Analysis</h4>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <a href="https://1drv.ms/x/c/170bfacda3467f60/EYT8O2GbaftJtMaMFvEI_MUBJ-K-xX9CYBww4NudeL3CIA">LIVE
+                        WEBSITE</a>
+                </div>
+            </div>
+        </div>
+    </main>
 </div>
-</div>
-<div class="app">
-    <img src="assets/images/Belly Button Biodiversity Dashboard.png" alt="Bellybutton Biodiversity Dashboard"
-        class="small-image">
-    <div class="info">
-        <h4>Navel Biodiversity</h4>
-        <p>JavaScript, Html, CSS</p>
-        <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
+
     </div>
-</div>
-<div class="app">
-    <img src="assets/images/sdgi.png" alt="SDGi Map" class="small-image">
-    <div class="info">
-        <h4>Sustainable Development Growth Index Map</h4>
-        <p>JavaScript, Html, CSS, Leaflet libraries</p>
-        <a href="https://mattcat1221.github.io/interactive_sdgi_map/">LIVE WEBSITE</a>
-    </div>
-</div>
-<div class="app">
-    <img src="assets/images/Crypto.png" alt="Bellybutton Biodiversity Dashboard" class="small-image">
-    <div class="info">
-        <h4>Cryptocurrency Dash</h4>
-        <p>JavaScript, Html, CSS</p>
-        <a href="https://crypto-clustering-analysis-811021pb3-caseys-projects-78b1de0d.vercel.app/">LIVE
-            WEBSITE</a>
-    </div>
-</div>
-<div class="app">
-    <img src="assets/images/tableau.png" alt="Tableau Map" class="small-image">
-    <div class="info">
-        <h4>Tableau Analysis</h4>
 
-        <a
-            href="https://public.tableau.com/app/profile/catherine.matthews1724/viz/tableauanalysis_17209724886070/GroveSt_HourlyArrivalActivity">LIVE
-            WEBSITE</a>
-    </div>
-</div>
-<div class="app">
-    <img src="assets/images/stocks.png" alt="Credit Risk Classification" class="small-image">
-    <div class="info">
-        <h4>VBA Analysis</h4>
-        <p>Lorem ipsum dolor sit amet.</p>
-        <a href="https://1drv.ms/x/c/170bfacda3467f60/EYT8O2GbaftJtMaMFvEI_MUBJ-K-xX9CYBww4NudeL3CIA">LIVE
-            WEBSITE</a>
-    </div>
-</div>
-</div>
-</main>
+    <main>
+        </div>
+        <!DOCTYPE html>
+        <html lang="en">
 
-</div>
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Contacts</title>
+            <style>
+                /* Flexbox styling for the contact section */
+                .contact {
+                    display: flex;
+                    justify-content: space-between;
+                    /* Space between items */
+                    align-items: center;
+                    /* Aligns items vertically */
+                    gap: 20px;
+                    /* Adds spacing between items */
+                }
 
-<main>
-    </div>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacts</title>
-    <style>
-        /* Flexbox styling for the contact section */
-        .contact {
-            display: flex;
-            justify-content: space-between; /* Space between items */
-            align-items: center; /* Aligns items vertically */
-            gap: 20px; /* Adds spacing between items */
-        }
+                .contact a {
+                    display: flex;
+                    align-items: center;
+                    text-decoration: none;
+                    /* Removes underline from links */
+                    color: black;
+                    /* Optional: change the link color */
+                }
 
-        .contact a {
-            display: flex;
-            align-items: center;
-            text-decoration: none; /* Removes underline from links */
-            color: black; /* Optional: change the link color */
-        }
+                .contact img {
+                    width: 30px;
+                    /* Adjust the icon size */
+                    height: 30px;
+                    margin-right: 10px;
+                    /* Space between icon and text */
+                }
 
-        .contact img {
-            width: 30px; /* Adjust the icon size */
-            height: 30px;
-            margin-right: 10px; /* Space between icon and text */
-        }
+                .contact a:hover {
+                    color: #0077b5;
+                    /* Change text color on hover (LinkedIn blue) */
+                }
+            </style>
+        </head>
 
-        .contact a:hover {
-            color: #0077b5; /* Change text color on hover (LinkedIn blue) */
-        }
-    </style>
-</head>
-<body>
+        <body>
 
-<h1>Contacts</h1>
-<div class="contact">
-    <!-- Email -->
-    <a href="https://mail.google.com/mail/u/0/#inbox">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Email" class="small-icon">
-        Email
-    </a>
+            <h1>Contacts</h1>
+            <div class="contact">
+                <!-- Email -->
+                <a href="https://mail.google.com/mail/u/0/#inbox">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Email"
+                        class="small-icon">
+                    Email
+                </a>
 
-    <!-- GitHub -->
-    <a href="https://github.com/mattcat1221" target="_blank">
-        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" class="small-icon">
-        GitHub
-    </a>
+                <!-- GitHub -->
+                <a href="https://github.com/mattcat1221" target="_blank">
+                    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub"
+                        class="small-icon">
+                    GitHub
+                </a>
 
-    <!-- LinkedIn -->
-    <a href="https://www.linkedin.com/in/catherine-matthews-110337232/" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" class="small-icon">
-        LinkedIn
-    </a>
-</div>
+                <!-- LinkedIn -->
+                <a href="https://www.linkedin.com/in/catherine-matthews-110337232/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png"
+                        alt="LinkedIn" class="small-icon">
+                    LinkedIn
+                </a>
+            </div>
 
-<script src="assets/js/script.js"></script>
-</body>
-</html>
+            <script src="assets/js/script.js"></script>
+        </body>
+
+        </html>
