--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="h0">
                         <p><strong>Data Analytics Bootcamp</strong><br>
                             University of Pennsylvania – Philadelphia, PA<br>
-                            03/2024 – Present</p>
+                            03/2024 – 09/2024</p>
                         <ul>
                             <li>Gained proficiency in technologies including Excel, Python, JavaScript, SQL Databases,
                                 Tableau, and more.</li>
@@ -136,7 +136,7 @@
                 <img src="assets/images/stocks.png" alt="Credit Risk Classification" class="small-image">
                 <div class="info">
                     <h4>VBA Analysis</h4>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Excel Visual Basic</p>
                     <a href="https://1drv.ms/x/c/170bfacda3467f60/EYT8O2GbaftJtMaMFvEI_MUBJ-K-xX9CYBww4NudeL3CIA">LIVE
                         WEBSITE</a>
                 </div>
