added box shadow and pafa certificate

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="details">
                     <h2 id="education">Education</h2>
                     <div class="h0">
-                        <p><strong>Data Analytics Bootcamp</strong><br>
+                        <p><strong>Certificate of Data Analysis</strong><br>
                             University of Pennsylvania – Philadelphia, PA<br>
                             03/2024 – 09/2024</p>
                         <ul>
@@ -50,6 +50,12 @@
                         <p><strong>Bachelors of Fine Arts</strong><br>
                             University of Pennsylvania – Philadelphia, PA<br>
                             09/2016 – 05/2022</p>
+                        </ul>
+                        <p><strong>Certificate of Fine Arts</strong><br>
+                            Pennsylvania Academy of Fine Arts – Philadelphia, PA<br>
+                            09/2013 – 05/2017</p>
+                        </ul>
+
                     </div>
                 </div>
 
